new privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,8 +5,28 @@
     <body>
         
         <h1><center>Privacy Policy</center></h1>
-        <p>I take your privacy seriously. I do not collect any personal information except for your ip. Your ip is used for other people to connect to you to be able to play the mod <b>Baldi's basics plus multiplayer</b> for the game <b>Baldi's basics plus</b> made by <b>Basically Games.</b> I also am not affiliated with <b>Basically Games</b> or <b>Mystman12</b></p>
-        
+        <p>Privacy Policy for Baldi's basics Multiplayer
+Last Updated: February 26, 2026
+
+1. Information Collection & "Join Code" System
+To facilitate multiplayer connectivity without exposing your private information to the public, this mod uses a Join Code system:
+<br><br>
+IP Address Collection: When you host a game, your public IP address is sent to our private database.
+<br><br>
+Code Generation: The database generates a unique, temporary Join Code linked to your IP.
+<br><br>
+Public Visibility: Only the Join Code is visible to other players or in any public lobby lists. Your actual IP address is never displayed publicly.
+<br><br>
+2. How Your Data is Processed
+The IP address acts as the "destination" for the game data. When a player enters your Join Code, our server looks up the associated IP address in the database and tells the player's game client where to send the connection request.
+<br><br>
+3. Data Retention & Deletion
+Temporary Storage: IP addresses and their associated Join Codes are stored in volatile memory/database entries only for the duration of the active session.
+<br><br>
+Automatic Removal: Once the host closes the game, or if the connection to our database is lost for more than a few minutes, the IP address and the Join Code are permanently deleted from our records.
+<br><br>
+4. Security & Peer-to-Peer Disclosure
+While your IP is hidden behind a Join Code in the menu, please note that because this mod uses Peer-to-Peer (P2P) technology, a technical user who joins your game may still be able to see your IP address through network monitoring tools (as their computer must talk directly to yours to play the game). We recommend only sharing your Join Code with players you trust.
     </body>
 </html>
 
